Add routing (#1)
* Refactor

* Refactoring to use virtual threads

* Handle 404 and 403 status codes

* Update response handling

* Move from jetty to inbuilt httpserver

* Handle preflight CORS request

* Split exchange into Request and Response.

* Add convenience methods to Request and REsponse

* Refactoring and removal of string literals.

* Add standard HTTP constants

* Ensure clean shutdown of request/response.

* wip

* Add routing and routing test

* Routing tests

* OCD code optimisation

* File handler

* File Handler

* Routing complete

---------

Co-authored-by: James Thorpe <jthorpe@hobartairport.com.au>